# niuniu-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture-and-flow.md  prompt.md  rebuild-checklist-2026-04-10.md
exp/CVE-2023-26145/: readme.md
exp/CVE-2024-51751/: Gradio vulnerable to arbitrary file read with File and UploadButton components.md
exp/CVE-2025-29927-POC/: README.md
exp/CVE-2025-49132-PHP-PEAR/: README.md  poc.py
exp/CVE-2026-24061/: readme.md
exp/pydash/: pydash 原型链污染.md
scripts/: fetch_portable_tools.py  install_toolchain.sh  pentest_quick_triage.sh  remote_control.sh
scripts/exploit_helpers/: dify_probe.py  gradio_map.py  internal_service_triage.py  pearcmd_payload.py  php_session_hijack_helper.py  proxy_php_ssrf_lfi_helper.py  supplychain_manifest_triage.py  telnet_verify.py  workflow_risk_scan.py
skills/ad-internal-compromise-flow/: SKILL.md
skills/ai-platform-attack-surface/: SKILL.md
skills/api-workflow-testing/: SKILL.md
skills/ci-workflow-poisoning/: SKILL.md
skills/cloud-asset-assessment/: SKILL.md
skills/cloud-security-enumeration/: SKILL.md
skills/cloud_ai_surface/: SKILL.md
skills/credential-secret-hunting/: SKILL.md
skills/ctf-core-knowledge/: SKILL.md
skills/cve-template-scanning/: SKILL.md
skills/cve_mapping/: SKILL.md
skills/dependency-confusion-assessment/: SKILL.md
skills/dify-self-hosted-assessment/: SKILL.md
skills/directory-identity-enumeration/: SKILL.md
skills/domain-operations/: SKILL.md
skills/domain_enum/: SKILL.md
skills/evidence-capture/: SKILL.md
skills/exploit_api/: SKILL.md
skills/exploit_web/: SKILL.md
skills/flag-discovery-and-submission/: SKILL.md
skills/flag_submit_recovery/: SKILL.md
skills/gradio-api-abuse/: SKILL.md
skills/internal-pivot-flow/: SKILL.md
skills/known-vulnerability-mapping/: SKILL.md
skills/lateral-movement-planning/: SKILL.md
skills/linux-privilege-escalation/: SKILL.md
skills/local-exp-catalog/: SKILL.md
skills/nextjs-middleware-bypass/: SKILL.md
skills/pearcmd-php-shell-drop/: SKILL.md
skills/pentest-entrypoint-triage/: SKILL.md
skills/persistence-operations/: SKILL.md
skills/php-session-hijack-helper/: SKILL.md
skills/pivot_lateral/: SKILL.md
skills/port-scan-operations/: SKILL.md
skills/privesc_maintain/: SKILL.md
tests/: test_agent_factory.py  test_agent_loop.py  test_answer_formatter.py  test_async_pentest_agent.py  test_challenge_memory_seeds.py  test_challenge_store.py  test_cli.py  test_competition_coordinator.py  test_competition_loop.py  test_config.py  test_contest_gateway.py  test_contest_mcp.py  test_controller.py  test_debug_chat.py  test_debug_repl.py  test_exploit_helpers.py  test_fetch_portable_tools_script.py  test_findings_bus.py  test_install_toolchain_script.py  test_manager.py  test_model_routing.py  test_project_metadata.py  test_prompts.py  test_recovery.py  test_remote_control_script.py  test_router.py  test_run_identity.py  test_skill_planner.py  test_skills_registry.py  test_state_store.py  test_supply_chain_helpers.py  test_telemetry.py  test_tool_bus.py  test_tool_inventory.py  test_tooling.py  test_tools_inventory.py  test_track3_stale_memory_cleanup.py  test_tracks.py  test_version.py  test_web_app.py  (+2 more)
(+100 files in other folders)
