[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "niuniu-agent"
version = "0.2.7"
description = "Autonomous MCP-only pentest agent for the Tencent hackathon main battlefield"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "anyio>=4.9.0",
  "httpx>=0.28.1",
  "mcp>=1.9.4",
  "openai>=1.75.0",
  "openai-agents>=0.2.11",
  "pydantic>=2.11.3",
  "pydantic-settings>=2.8.1",
  "typer>=0.15.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
]

[project.scripts]
niuniu-agent = "niuniu_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/niuniu_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"
testpaths = ["tests"]
