[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "niuniu-agent"
version = "0.2.8"
description = "Autonomous MCP-only pentest agent for the Tencent hackathon main battlefield"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "anyio>=4.9.0",
  "fastapi>=0.115.12",
  "httpx>=0.28.1",
  "mcp>=1.9.4",
  "openai>=1.75.0",
  "openai-agents>=0.2.11",
  "pydantic>=2.11.3",
  "pydantic-settings>=2.8.1",
  "typer>=0.15.2",
  "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
]
tools = [
  "beautifulsoup4>=4.13.4,<4.14",
  "blinker==1.9.0",
  "bs4==0.0.2",
  "impacket>=0.13.0",
  "certipy-ad>=5.0.4",
  "curl-cffi==0.15.0",
  "flask==3.1.3",
  "itsdangerous==2.2.0",
  "jinja2==3.1.6",
  "markupsafe==3.0.3",
  "pysocks==1.7.1",
  "pyspnego==0.12.1",
  "requests-ntlm==1.3.0",
  "smbmap>=1.10.6",
  "soupsieve==2.8.3",
  "werkzeug==3.1.8",
  "pip-audit>=2.9.0",
  "bloodhound @ git+https://github.com/dirkjanm/BloodHound.py.git",
  "netexec @ git+https://github.com/Pennyw0rth/NetExec.git",
]

[project.scripts]
niuniu-agent = "niuniu_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/niuniu_agent"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"
testpaths = ["tests"]
